# isles

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  Isles.sln  LICENSE  README.md  build.bat  build.ps1  build.sh  isles.sln  settings.ini
.github/: dependabot.yml
.github/workflows/: build.yml
CodePlexTest/: CodePlexTest.csproj  CodePlexTest.sln  Game1.cs  Program.cs
CodePlexTest/Content/: Content.contentproj
CodePlexTest/Properties/: AssemblyInfo.cs
Source/: Isles.sln  Readme - Source.txt
Source/Document/: Changelog.txt  Design Summary.txt  Readme - Game.txt  Readme - Source.txt  Readme.txt  TODO.txt
Source/Isles/: Game.cs  Game1.cs  GameDefault.cs  Isles.csproj  License.txt  Program.cs  Settings.xml
Source/Isles.Engine/: Class1.cs  Isles.Engine.csproj  Isles.Engine.csproj.vspscc  Scene.cs
Source/Isles.Engine/AI/: Graph.cs  PathManager.cs  PriorityQueue.cs
Source/Isles.Engine/Content/: Content.contentproj
Source/Isles.Engine/Diagrams/: Overview.cd  SceneManagement.cd  UI.cd
Source/Isles.Engine/Entity/: Agent.cs  Building.cs  Crop.cs  Entity.cs  Farmland.cs  Function.cs  Hand.cs  Stone.cs  Tree.cs  WorldContent.cs
Source/Isles.Engine/Game/: Assets.cs  AudioManager.cs  Camera.cs  ContentManager.cs  Entity.cs  Event.cs  Function.cs  Game.cs  GameLogic.cs  GameScene.cs  GameWorld.cs  Hand.cs  Helper.cs  IScreen.cs  Input.cs  Interface.cs  Log.cs  Math2D.cs  Movement.cs  Profiler.cs  Scene.cs  SceneManager.cs  ScreenshotCapturer.cs  Settings.cs  Spell.cs  State.cs  Storage.cs  Win32.cs
Source/Isles.Engine/Graphics/: AnimationClip.cs  AnimationPlayer.cs  BaseLandscape.cs  Billboard.cs  BloomEffect.cs  Environment.cs  GameModel.Manager.cs  GameModel.cs  Graphics2D.cs  ILandscape.cs  Keyframe.cs  Landscape.Grid.cs  Landscape.Layer.cs  Landscape.Patch.cs  Landscape.Reader.cs  Landscape.Sky.cs  Landscape.Terrain.cs  Landscape.Vegetation.cs  Landscape.Water.cs  Landscape.cs  Loading.cs  MipmappedLandscape.cs  ModelManager.cs  ParticleSystem.cs  PointSprite.cs  ShadowEffect.cs  ShadowMapEffect.cs  SkinningData.cs  Text.cs  TiledLandscape.cs  TrailEffect.cs  Vertex.cs
Source/Isles.Engine/Levels/: Level.cs
Source/Isles.Engine/Properties/: AssemblyInfo.cs
Source/Isles.Engine/Screens/: GameScreen.Logic.cs  GameScreen.UI.cs  GameScreen.cs
Source/Isles.Engine/Spells/: Fireball.cs  Spell.cs
Source/Isles.Engine/UI/: Button.cs  GameUI.cs  Panel.cs  ProgressBar.cs  (+2 more)
Source/Isles.Pipeline/: ContentProcessor1.cs  Isles.Pipeline.csproj
content/Audios/: Isles.xap
content/Cursors/: attack.ani  screen_move.cur  screen_top.cur
content/Effects/: Billboard.fx  ShadowMap.fx  TiledTerrain.fx
content/Landscapes/: Layer0Color.dds  Layer1Normal.DDS  terrainjmgrassdirt.dds
content/Models/: engine_diff_tex.tga  fang1.FBX
content/Settings/: Bloom.xml  Defaults.xml
content/Sounds/: Isles.xap
data/: Readme.txt
data/Cursors/: NormalCursor.cur  gather_weapon.ani  screen_bottom.cur  target_neutral.ani  target_red.ani
data/Effects/: Billboard.fx  Common.fxh  Disappear.fx  DisortionDisappear.fx  Graphics2D.fx  MipmappedTerrain.fx  Model.fx  ParticleEffect.fx  SkinnedModel.fx  Sky.fx  Surface.fx  TiledTerrain.fx  Water.fx
data/Fonts/: Default.spritefont
data/Landscapes/: Landscape.json  Landscape.xml  Layer0Alpha.tga  Layer0Normal.dds  Layer1Color.dds  Layer2Color.dds  terrainjmgrassdirt_n.dds
data/Levels/: World.xml
data/Models/: AlphaPalm.X  box.X  cube.gltf  hammer.gltf  hand.fbx  lumbermill.gltf  rally.X  rally.gltf  ruined.FBX  shield.X  shield.gltf  spear.X  stone.FBX  stone.gltf  warhammer.X  wood.X
data/Settings/: Defaults.xml  DefaultsFast.xml  particles.json  settings.json
data/cursors/: attack.json  default.ani  gather_weapon.json  menu.json  screen_bottom.json  screen_left.json  screen_move.json  screen_right.json  screen_rotate.json  screen_top.json  target_green.ani  target_green.json
data/landscapes/: Landscape.json
data/levels/: demo.json
data/models/: altar.gltf  barracks.gltf  box.gltf  farm.gltf  follower.gltf  gold.gltf  goldmine.gltf  hellfire.gltf  militia.gltf  spear.gltf  warhammer.gltf
data/settings/: Defaults.xml  DefaultsFast.xml  bloom.json  particles.json  prefabs.json  settings.json
data/shaders/: Graphics2D.fx  Model.fx  ParticleEffect.fx  Surface.fx  Terrain.fx
editor/: index.html  main.js  package-lock.json  package.json  preload.js  render.js
gltf/: alphapalm.gltf  altar.gltf  barracks.gltf  box.gltf  cube.gltf  farm.gltf  follower.gltf  gold.gltf  goldmine.gltf  hammer.gltf  hellfire.gltf  hunter.gltf  lumbermill.gltf  militia.gltf  rally.gltf  ruined.gltf  shield.gltf  sorceress.gltf  spear.gltf  stone.gltf  tower.gltf  townhall.gltf  warhammer.gltf  wood.gltf
native/: .gitignore  CMakeLists.txt  build.bat  build.sh
native/include/: api.h  box2d_interop.h  move.h  navmesh.h
native/src/: box2d_interop.cpp  lib.cpp  move.cpp  navmesh.cpp
protos/: move.proto
src/Isles/: Isles.csproj  Program.cs  Settings.xml  app.config
src/Isles.Pipeline/: Isles.Pipeline.csproj
src/isles/: Program.cs  isles.csproj
src/isles.core/: Graph.cs  Move.cs  PathFinder.cs  PriorityQueue.cs  isles.core.csproj
src/isles.graphics/: BirdEyeCamera.cs  Heightmap.cs  ImGuiRenderer.cs  MeshHelper.cs  Model.cs  ModelLoader.cs  Terrain.cs  TextureLoader.cs  VertexTypes.cs  isles.graphics.csproj
src/isles.native/: CMakeLists.txt  api.h  http.cpp  lib.cpp  main.cpp  move.cpp  move.h  navmesh.cpp  navmesh.h
src/isles.sandbox/: MoveSandbox.cs  isles.sandbox.csproj
src/islesd/: http.cpp  http.hpp  main.cpp
src/native/: CMakeLists.txt
tests/isles.core.tests/: MoveTest.cs  NavMeshTest.cs  PathFinderTest.cs  PlotLineTest.cs  PolyMapTest.cs  Snapshot.cs  SvgBuilder.cs  TestHelper.cs  isles.core.tests.csproj
tests/isles.sandbox/: MoveSandbox.cs  isles.sandbox.csproj
tests/isles.testbeds/: Program.cs  isles.testbeds.csproj
tests/isles.tests/: MoveTests.cs  UnitTest1.cs  isles.tests.csproj
xna-3.0-win-x86/: Microsoft.Xna.Framework.Game.xml
xnb/Content/: Credits.txt
(+559 files in other folders)
